syntax = "proto3";

option csharp_namespace = "Ozon.Route256.Practice.OrdersService";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service Orders
{
  rpc CancelOrder(CancelOrderRequest) returns(CancelOrderResponse);
  rpc GetOrderStatus(GetOrderStatusRequest) returns(GetOrderStatusResponse);
  rpc GetRegions(GetRegionsRequest) returns(GetRegionsResponse);
  rpc GetOrders(GetOrdersRequest) returns(GetOrdersResponse);
  rpc GetAggregatedOrdersByRegion(GetAggregatedOrdersByRegionRequest) returns(GetAggregatedOrdersByRegionResponse);
  rpc GetOrdersByCustomer(GetOrdersByCustomerRequest) returns(GetOrdersByCustomerResponse);
}

message CancelOrderRequest {
  int64 id = 1;
}

message CancelOrderResponse {
    bool success = 1;
    google.protobuf.StringValue error = 2;
}

message GetOrderStatusRequest {
    int64 id = 1;
}

message GetOrderStatusResponse {
   OrderStatus status = 1;
}

message GetRegionsRequest {
}

message GetRegionsResponse {
    repeated Region regions = 1;
}

message GetOrdersRequest {
    repeated Region regions = 1;
    OrderType order_type = 2;
    Paginate paginate = 3;
    optional SortOrder sort_order = 4;
    optional ValueOrder value_order = 5;
}

message GetOrdersResponse {
    repeated Order orders = 1;
}

message GetAggregatedOrdersByRegionRequest {
    repeated Region regions = 1; // todo maybe just region id is better(or a name if it's unique')
    google.protobuf.Timestamp since_timestamp = 2;
}

message GetAggregatedOrdersByRegionResponse {
    map<int32, OrdersStat> stat_by_region = 1; 
    repeated Region regions = 2; // contains a name of region
}

message GetOrdersByCustomerRequest {
    int64 customer_Id = 1;
    google.protobuf.Timestamp since_timestamp = 2;
    Paginate paginate = 3;
}

message GetOrdersByCustomerResponse {
    repeated Order orders = 1;
}

// ---  Common  ---
message Order {
    int64 id = 1;
    OrderStatus status = 2;
    OrderType type = 3;
    int64 customer_Id = 4;
    string customer_full_name = 5;
    string customer_mobile_number = 6;
    Address delivery_address = 7;
    int32 items_count = 8;
    double price = 9; 
    double weight = 10;
    google.protobuf.Timestamp created = 11;
    Region created_region = 12;
}

message Address {
  string region = 1;
  string city = 2;
  string street = 3;
  string building = 4;
  string apartment = 5;
  double latitude = 6;
  double longitude = 7;
}

message Region {
    int32 id = 1;
    string name = 2;
}

message OrdersStat{
    int32 orders_count = 2;
    double price = 3; // Общая сумма заказов?? todo
    double weight = 4;
    int32 customers_count = 5;
}

message Paginate {
    int32 position = 1;
    int32 count = 2;
    Direction direction = 3;
}

enum OrderStatus {
  CREATED = 0;
  SENT_TO_CUSTOMER = 1;
  DELIVERED = 2;
  LOST = 3;
  CANCELLED = 4;
}

enum OrderType {
  WEB = 0;
  API = 1;
  MOBILE = 2;
}

enum Direction {
  AFTER = 0;
  BEFORE = 1;
  AROUND = 2;
}

enum SortOrder {
  ASC = 0;
  DESC = 1;
}

enum ValueOrder {
  REGION = 0;
  STATUS = 1;
}